Update main home page.html add comments

--- a/main home page.html
+++ b/main home page.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="responsive.css">
   </head>
 <body>
-<!-- Header -->
+<!- Header ->
 <header class="navbar">
   <div class="logo">Ecommerce</div>
   <nav class="nav-links">
